# clairedev-platform

./: README.md  cache_manager.py  database.py  deployment_manager.py  env_documentation_generator.py  main.py  migrate_to_github.py  multi_ai_endpoints.py  multi_ai_manager.py  project_goals.md  pyproject.toml  quality_control.py  real_time_collaboration.py  requirements.txt  self_migration_manager.py  startup_test.py  templates.py  workspace_manager.py
.cache/replit/: toolchain.json
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: dotreplitenv.json
