[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "gitpython>=3.1.44",
    "openai>=1.82.1",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
